# mcp-slack

./: .gitignore  README.md  pyproject.toml
src/mcp_slack/: __init__.py  config.py  main.py
src/mcp_slack/slack/: __init__.py  app.py  events.py
